# libmba

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  Makefile.darwin  Makefile.linux  README.md  README.txt  README.win32  includes_changer.py  libmba.spec  mktool  mktool.c
.github/workflows/: build-lib.yaml  iwyu.yaml
docs/: Makefile  chklst  genchar.c  msgno.html  msgno_example.html  suba.txt  text.csv  todo  varraybins.txt
docs/man/: CMakeLists.txt
docs/ref/: allocator.html  bitset.html  cfg.html  csv.html  diff.html  eval.html  foo.html  hashmap.html  hexdump.html  libmba.html  linkedlist.html  msgno.html  overview.html  path.html  pool.html  sho.html  stack.html  suba.html  svcond.html  svsem.html  text.html  text_details.html  time.html  toc.html  varray.html
docs/www/: index.html
docs/xml/: README.txt  allocator.xml  bitset.xml  blank.xml  cfg.xml  csv.xml  diff.xml  domnode.xml  eval.xml  hashmap.xml  hexdump.xml  index.xml  libmba.xml  linkedlist.xml  man.xsl  mbs.xml  msgno.xml  path.xml  pool.xml  proj.xsl  ref.xsl  shellout.xml  stack.xml  suba.xml  svcond.xml  svsem.xml  text.xml  text_details.xml  time.xml  varray.xml
examples/: Makefile  calc.c  csvprint.c  data.csv  hdump.c  hexd.c  semc.c  semfight.sh  test  toupper.c
examples/diff/: Makefile  bindiff.c  hexdiff.c  spell.c  strdiff.c
include/: bitset.h  cfg.h  csv.h  diff.h  eval.h  hashmap.h  linkedlist.h  pool.h  stack.h  suba.h  svcond.h  svsem.h  text.h  varray.h
include/mba/: cfg.h  csv.h  daemon.h  diff.h  hashmap.h  misc.h  shellout.h  svcond.h  svsem.h  text.h
src/: allocator.c  bitset.c  cfg.c  csv.c  daemon.c  dbug.c  diff.c  eval.c  hashmap.c  hexdump.c  linkedlist.c  misc.c  msgno.c  path.c  pool.c  shellout.c  stack.c  suba.c  svcond.c  svsem.c  text.c  time.c  varray.c
tcase/: Makefile  Makefile.hpux  Makefile.msvc  README.txt  common.c  common.h  rmsem  rmsem.tru64  tmba-win32.csv  tmba.c  tmba.cfg  tmba.csv
tcase/tests/: AdtInit.c  BitsetOps.c  Blank.c  BlankExercise.c  CfgOps.c  CfgQueryStringExamples.c  CfgSuba.c  CsvEol.c  CsvExamples.c  DiffExamples.c  DomnodeLoadStore.c  EvalExamples.c  HashmapCheck.c  HashmapCount.c  HashmapExercise.c  HashmapExercise0.c  HashmapExercise1.c  LinkedlistExercise.c  MbsSimple.c  OpenCre.c  PathCanonExamples.c  PoolExercise.c  SharedAdts.c  ShelloutSimple.c  StackExercise.c  SubaExercise.c  SvcondProdCons.c  SvsemCounter.c  TcharAll.c  TextTest.c  VarrayOps.c
tcase/tests/data/: CfgOps.prp  CfgQueryStringExamples.csv  CfgSuba.prp  CsvExamples.csv  CsvExamples.notrim  CsvExamples.trim  CsvExamples2.csv  CsvExamples2.notrim  CsvExamples2.trim  DiffExamples.data  EvalExamples.data  PathCanonExamples.data  draft-leach-digest-sasl-05.txt  out.xml  out2.xml
